version/0.30/_sources/api/solver/datamodel/solver_workflow/solver_workflow_contents.rst.txt
.. _ref_solver_datamodel_solver_workflow:

solver.datamodel.solver_workflow
================================

.. autoclass:: ansys.fluent.core.generated.datamodel_251.solver_workflow.Root
   :members: JournalCommand, TWF_AssociateMesh, TWF_BasicMachineDescription, TWF_BladeRowAnalysisScope, TWF_CompleteWorkflowSetup, TWF_CreateCFDModel, TWF_ImportMesh, TWF_MapRegionInfo, TWF_ReportDefMonitors, TWF_TurboPhysics, TWF_TurboRegionsZones, TWF_TurboSurfaces, TWF_TurboTopology
   :show-inheritance:
   :undoc-members:
   :exclude-members: __weakref__, __dict__
   :special-members: __init__
   :autosummary:
   :autosummary-members:

.. toctree::
   :hidden:

   CellZone/CellZone_contents
   FaceZone/FaceZone_contents
   GlobalSettings/GlobalSettings_contents
   Zone/Zone_contents
   ZoneList/ZoneList_contents
